tests/baselines/reference/declFileObjectLiteralWithOnlySetter.errors.txt
tests/cases/compiler/declFileObjectLiteralWithOnlySetter.ts(4,13): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/compiler/declFileObjectLiteralWithOnlySetter.ts (1 errors) ====
    function /*1*/makePoint(x: number) { 
        return {
            b: 10,
            set x(a: number) { this.b = a; }
                ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
        };
    };
    var /*3*/point = makePoint(2);
    point./*2*/x = 30;